Updated ignore file list

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-TeHaB\FW\Debug\Core
-TeHaB\FW\Debug\Drivers
-TeHaB\FW\Debug\makefile
-TeHaB\FW\Debug\objects.list
-TeHaB\FW\Debug\objects.mk
-TeHaB\FW\Debug\sources.mk
-TeHaB\FW\Debug\THPFW.map
+TeHaP\FW\Debug\Core
+TeHaP\FW\Debug\Drivers
+TeHaP\FW\Debug\makefile
+TeHaP\FW\Debug\objects.list
+TeHaP\FW\Debug\objects.mk
+TeHaP\FW\Debug\sources.mk
+TeHaP\FW\Debug\THPFW.map
