--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 *.ko
 *.obj
 *.elf
-FW/Debug/Core/*
-FW/Debug/Drivers/*
-FW/Debug/makefile
-FW/Debug/objects.list
-FW/Debug/objects.mk
-FW/Debug/sources.mk
-FW/Debug/THPFW.map
+*.mk
+/FW/Debug/Core/*
+/FW/Debug/Drivers/*
+/FW/Debug/makefile
+/FW/Debug/objects.list
+/FW/Debug/objects.mk
+/FW/Debug/sources.mk
+/FW/Debug/THPFW.map
